--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,34 +11,28 @@
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
 <!--   TODO #1 - Use a loop to display job results in a table.-->
-  <th:block th:each="job : ${jobs}">
+
+  <th:block th:fragment="table" th:each="job : ${jobs}">
     <table class="job-listing">
       <tr>
-        <td>ID:</td>
-        <td th:text="${job.id}"></td>
+        <td>ID:</td><td th:text="${job.id}"></td>
       </tr>
       <tr>
-        <td>Name:</td>
-        <td th:text="${job.name}"></td>
+        <td>Name:</td><td th:text="${job.name}"></td>
       </tr>
       <tr>
-        <td>Employer:</td>
-        <td th:text="${job.employer}"></td>
+        <th>Employer:</th><td th:text="${job.employer}"></td>
       </tr>
       <tr>
-        <td>Location:</td>
-        <td th:text="${job.location}"></td>
+        <th>Location:</th><td th:text="${job.location}"></td>
       </tr>
       <tr>
-        <td>Position Type:</td>
-        <td th:text="${job.positionType}"></td>
+        <th>Position Type:</th><td th:text="${job.positionType}"></td>
       </tr>
       <tr>
-        <td>Skill:</td>
-        <td th:text="${job.coreCompetency}"></td>
+        <th>Skill:</th><td th:text="${job.coreCompetency}"></td>
       </tr>
     </table>
-    <hr/>
   </th:block>
 
 </div>
