--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,38 +34,9 @@
     <input type="submit" value="Search" />
   </form>
 
-  <hr />
 
-  <!-- TODO #4 - Loop over the search results to display all job fields. -->
-    <th:block th:each="job : ${jobs}">
-        <table class="job-listing">
-            <tr>
-                <td>ID:</td>
-                <td th:text="${job.id}"></td>
-            </tr>
-            <tr>
-                <td>Name:</td>
-                <td th:text="${job.name}"></td>
-            </tr>
-            <tr>
-                <td>Employer:</td>
-                <td th:text="${job.employer}"></td>
-            </tr>
-            <tr>
-                <td>Location:</td>
-                <td th:text="${job.location}"></td>
-            </tr>
-            <tr>
-                <td>Position Type:</td>
-                <td th:text="${job.positionType}"></td>
-            </tr>
-            <tr>
-                <td>Skill:</td>
-                <td th:text="${job.coreCompetency}"></td>
-            </tr>
-        </table>
-        <hr/>
-    </th:block>
+<!-- TODO #4 - Loop over the search results to display all job fields.&ndash;&gt;-->
+    <th:block th:replace="list-jobs :: table"  th:each="job : ${jobs}"> </th:block>
 
 </div>
 
