--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -21,16 +21,16 @@
         <td>Name:</td><td th:text="${job.name}"></td>
       </tr>
       <tr>
-        <th>Employer:</th><td th:text="${job.employer}"></td>
+        <td>Employer:</td><td th:text="${job.employer}"></td>
       </tr>
       <tr>
-        <th>Location:</th><td th:text="${job.location}"></td>
+        <td>Location:</td><td th:text="${job.location}"></td>
       </tr>
       <tr>
-        <th>Position Type:</th><td th:text="${job.positionType}"></td>
+        <td>Position Type:</td><td th:text="${job.positionType}"></td>
       </tr>
       <tr>
-        <th>Skill:</th><td th:text="${job.coreCompetency}"></td>
+        <td>Skill:</td><td th:text="${job.coreCompetency}"></td>
       </tr>
     </table>
   </th:block>
